syntax = "proto3";
package AuthService;
option go_package = "./GrpcServices";

service Auth {
  rpc Authenticate (Credentials) returns (Token);
  rpc NewAccount(user) returns (Token);
}

message Credentials {
  string phone = 1;
  string password = 2;
}

message Token {
  string token = 1;
}

message user {
  string id = 1;
  driver driver_details = 2;
}

message driver {
  string name = 1;
  string lastname = 2;
  string vehicle_no = 3;
  uint32 balance = 4;
  string profile_pic = 5;
}