syntax = "proto3";
package GrpcServices;
option go_package = "./GrpcServices";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service DriversLocationReport {
  rpc UpdateLocation(location) returns (google.protobuf.BoolValue);
  rpc Deactivate(google.protobuf.Empty) returns (google.protobuf.BoolValue);
}

message location {
  double x = 1;
  double y = 2;
}